# VIDO-SLAM

src/config/: kitti_config.yaml
vido_slam/: CMakeLists.txt
vido_slam/include/: RecordOnRender.h
vido_slam/src/viewer/: VidoViewer.cc
